# makefile-sample

./: .gitignore
sample-four/: CMakeLists.txt  README.md
sample-four/include/: common.h  sum.h  val.h
sample-four/src/: get.c  main.c  sum.c  val.c
sample-one/: Makefile  get.c  get.h  sum.c  val.h
sample-three/: Makefile.am  README.md  main.c  val.c
sample-two/src/: Makefile  get_.c  main_.c  sum_.c  val_.c
